<resources>
    <string name="app_name">Watchlist_Tubes1</string>
    <string name="iniContoh">Test</string>
    <string name="Nama_App">Watchlist App</string>
    <string name="version">Version 1.0</string>
    <string name="btn_start">Start</string>
    <string name="judul_list">Film Lists</string>
    <string name="judul_add">Add Movie/Series</string>
    <string name="tv_name">Name</string>
    <string name="tv_sinopsis">Synopsis</string>
    <string name="tv_poster">Add Poster</string>

<!--    Accessibility, for impaired/blind people(?)-->
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <string name="add">Add</string>
    <string name="tv_status">Status : Completed</string>
    <string name="et_review">Input your review here</string>
    <string name="btn_save">Save</string>
</resources>